# Android-Journey

./: README.md
freestyle/: notes.txt
freestyle/AndroidProjects/30daysOf/: settings.gradle.kts
freestyle/AndroidProjects/30daysOf/app/: build.gradle.kts
freestyle/AndroidProjects/DigitalLemonadeApp/: settings.gradle.kts
freestyle/AndroidProjects/DigitalLemonadeApp/app/: build.gradle.kts
freestyle/AndroidProjects/LearnTogetherApp/app/: build.gradle.kts
freestyle/AndroidProjects/MidLifeCrisisBirthday/: settings.gradle.kts
freestyle/AndroidProjects/MidLifeCrisisBirthday/app/: build.gradle.kts
freestyle/AndroidProjects/MyAndroidBusinessCard/: settings.gradle.kts
freestyle/AndroidProjects/MyAndroidBusinessCard/app/: build.gradle.kts
freestyle/AndroidProjects/MyArtGalleryApp/: settings.gradle.kts
freestyle/AndroidProjects/MyArtGalleryApp/app/: build.gradle.kts
freestyle/AndroidProjects/MyDiceRollApp/: settings.gradle.kts
freestyle/AndroidProjects/MyDiceRollApp/app/: build.gradle.kts
freestyle/AndroidProjects/QuadrantApp/app/: build.gradle.kts
freestyle/AndroidProjects/SuperheroesApp/app/: build.gradle.kts
freestyle/AndroidProjects/freestyle/: settings.gradle.kts
freestyle/AndroidProjects/greetingcard/: settings.gradle.kts
freestyle/freestyle/: CMakeCache.txt  CMakeLists.txt  Log.cpp  Log.h  Makefile  cmake_install.cmake  freestyle  main.cpp
freestyle/moveSemantics/: moveSemantics.cpp
gahbidg/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ex2part1.cpp  ex2part1Attempt2.cpp
(+106 files in other folders)
